feat: add sample profanity filter java (cg-3911)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,26 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+.gradle
+build/
+target/
+tempo-data/
+!**/src/main/**/build/
+!**/src/test/**/build/
+gradle.properties
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
 # Node artifact files
 node_modules/
 dist/
@@ -25,6 +45,12 @@ dist/
 
 # JetBrains IDE
 .idea/
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 # Unit test reports
 TEST*.xml
@@ -48,3 +74,21 @@ Thumbs.db
 *.mov
 *.wmv
 
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+# Jar files
+*.jar
+!gradle/wrapper/gradle-wrapper.jar
+!jars/*.jar
+
+# Env files
+.env*
+!.env.template
+
+# Others
+.run
