feat: add sample profanity filter java (cg-3911) - set java sourceCompatibility

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,4 @@ AB_NAMESPACE=accelbyte
 AB_CLIENT_ID=
 AB_CLIENT_SECRET=
 PLUGIN_GRPC_SERVER_AUTH_ENABLED=true
+#GRPC_SERVER_URL='0.tcp.ap.ngrok.io:xxxxx'  # Use your ngrok forwarding URL
