test: rename test class

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,5 @@
 AB_BASE_URL=https://test.accelbyte.io
-AB_NAMESPACE=accelbyte
 AB_CLIENT_ID=
 AB_CLIENT_SECRET=
+AB_NAMESPACE=
 PLUGIN_GRPC_SERVER_AUTH_ENABLED=true
-#GRPC_SERVER_URL='0.tcp.ap.ngrok.io:xxxxx'  # Use your ngrok forwarding URL
