--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 AccelByte Inc. All Rights Reserved.
+# Copyright (c) 2018-2019 AccelByte Inc. All Rights Reserved.
 # This is licensed software from AccelByte Inc, for limitations
 # and restrictions contact your company contract manager.
 
@@ -9,25 +9,27 @@ services:
     ports:
       - "6565:6565"
       - "8080:8080"
+      # - "5005:5005"
     environment:
       - AB_CLIENT_ID=${AB_CLIENT_ID}
       - AB_CLIENT_SECRET=${AB_CLIENT_SECRET}
       - AB_BASE_URL=${AB_BASE_URL}
       - AB_NAMESPACE=${AB_NAMESPACE}
-      - PLUGIN_GRPC_SERVER_AUTH_ENABLED=false
+      - PLUGIN_GRPC_SERVER_AUTH_ENABLED
       - OTEL_EXPORTER_ZIPKIN_ENDPOINT=http://host.docker.internal:9411/api/v2/spans
       - OTEL_TRACES_EXPORTER=zipkin
       - OTEL_METRICS_EXPORTER=none
-      - OTEL_SERVICE_NAME=ChatFilterServerJava
+      - OTEL_SERVICE_NAME=ProfanityFilterGrpcPluginServerJava
       - OTEL_PROPAGATORS=b3multi
-    logging:
-      driver: fluentd
-      options:
-        fluentd-address: "host.docker.internal:24225"
-        fluentd-async-connect: "true"
-        tag: docker
+      # - JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
     extra_hosts:
       - host.docker.internal:host-gateway
-
+    # logging:
+    #   driver: loki
+    #   options:
+    #     loki-url: http://host.docker.internal:3100/loki/api/v1/push
+    #     mode: non-blocking
+    #     max-buffer-size: 4m
+    #     loki-retries: "3"
 
 
