--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,41 @@
 plugins {
-	id "io.github.lognet.grpc-spring-boot" version '4.8.1'
-	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
-	id 'java'
-	id 'org.springframework.boot' version '2.7.4'
+	id 'application'
+	id "io.github.lognet.grpc-spring-boot" version '5.1.5'
+	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.springframework.boot' version '3.1.1'
 }
 
-group = 'net.accelbyte'
+group = 'net.accelbyte.profanity.filter'
 version = '0.0.1'
 sourceCompatibility = '17'
 project.buildDir = 'target'
+
+mainClassName = 'net.accelbyte.profanity.filter.App'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
-	implementation 'com.google.code.gson:gson:2.9.1'
-	implementation 'io.micrometer:micrometer-registry-prometheus:1.9.5'
-	implementation 'net.accelbyte.sdk:sdk:0.64.0'
-	implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
-	implementation 'org.projectlombok:lombok:1.18.24'
-	implementation 'org.springframework.boot:spring-boot-starter:2.7.5'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.5'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
+	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+	implementation 'org.projectlombok:lombok:1.18.30'
+	implementation 'io.micrometer:micrometer-registry-prometheus:1.12.0'
+	implementation 'org.springframework.boot:spring-boot-starter:3.1.1'
+	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.1'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.1.1'
+	implementation 'net.accelbyte.sdk:sdk:0.57.0'
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+	// version matched with grpc-spring-boot https://github.com/LogNet/grpc-spring-boot-starter/blob/master/ReleaseNotes.md
+	testImplementation 'io.grpc:grpc-testing:1.58.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.1'
 }
 
 bootJar {
@@ -38,7 +47,7 @@ bootRun {
 		jvmArgs = (project.jvmArgs.split("\\s+") as List)
 	} else {
 		jvmArgs = ['-javaagent:jars/aws-opentelemetry-agent.jar',
-				   '-Dotel.service.name=CustomChatFilterJava',
+				   '-Dotel.service.name=CustomCouldsaveValidatorServiceJavaServerDocker',
 		           '-Dotel.propagators=b3multi',
 				   '-Dotel.metrics.exporter=none',
 				   '-Dotel.traces.exporter=zipkin',
